# bazel-glfw-build

./: WORKSPACE.bazel
KHR/: BUILD
glad/: BUILD  glad.c  glad.h
glm/: BUILD
main/: BUILD  main.cc
